# sf-tech-events

./: README.md  pyproject.toml
docs/: app.js  index.html  styles.css
src/sf_tech_events/: __init__.py  profile.py  prompt.py
src/sf_tech_events.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_prompt.py
